# HomeLab-Web-App-Development-Template

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.prod.yaml  compose.yaml  secrets.env
.github/workflows/: ci.yml
backend/: app.py  config.py  db.py  routes.py
docker/: healthcheck.py
frontend/: tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.tsx
ops/docker/: Dockerfile  build.dockerfile  build.dockerignore  dev.caddyfile  dev.compose.yaml  dev.dockerfile  nami-build.Dockerfile  nami-dev.compose.yaml  workspace.bootstrap.sh  workspace.compose.yaml  workspace.dockerfile  workspace.entrypoint.sh
ops/scripts/: build_nami.sh  clean.sh  document.sh  gen_ts_types.py  nami-wrapper.sh  organize.sh  workspace_reload.py
src/: config.yaml  setup.yaml
src/backend/: .env.example  README.md  app.py  db.py  requirements.txt
src/cli/: nami.py
src/frontend/: index.html  package-lock.json  package.json
src/orchestrator/: Dockerfile  docker-compose.yaml  gen_ts_types.py  main.py
src/python_module/: README.md  __init__.py  main.py  pyproject.toml
src/python_module/tsunami/: config.py  db.py  endpoints.py  functions.py  web.py
src/python_module/tsunami.egg-info/: SOURCES.txt  top_level.txt
src/routing/: __init__.py  endpoints.py  requirements.txt  server.py
src/ts_module/: tsconfig.json
src/utils/: notes.py
template/.nami-core/: package.json
template/.nami-ts_module/: README.md  package-lock.json  package.json
template/app/: package.json  pyrightconfig.json  tsconfig.json
template/routes/: index.tsx  note.[note_id].py
(+82 files in other folders)
